--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     <script src="/js/google-code-prettify/prettify.js"></script>
     <script src="/js/jquery.uniform.min.js"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/git.js"></script>
     <script src="http://yandex.st/highlightjs/7.3/highlight.min.js">;</script>
   </body>
 </html>
