--- a/trello.html
+++ b/trello.html
@@ -1,12 +1,11 @@
 <script>
 function getURLParameter(name) {
-  return decodeURIComponent((new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search) || [null, ''])[1].replace(/\+/g, '%20')) || null;
+  return decodeURIComponent((new RegExp('[?|&|#]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.href) || [null, ''])[1].replace(/\+/g, '%20')) || null;
 }
-console.log(getURLParameter('code'));
 window.unityAsync({
 	className:"window.unityScriptObject", 
 	funcName:"SendResponse", 
-	funcArgs:[getURLParameter('#token')],
+	funcArgs:[getURLParameter('token')],
 	onSuccess:function(a){
 		console.log(a);
 	}
