more color changes

--- a/randf/index.html
+++ b/randf/index.html
@@ -33,7 +33,7 @@
      
       <div class="row ">
               <div class="col-md-12">
-                  <input style="color:white" id="commission" type="text" disabled class="form-control btn-success" value="Commission: $100" />
+                  <input style="color:white" id="commission" type="text" readonly class="form-control btn-success" value="Commission: $100" />
               </div>
           </div>
      <div class="row ">
